# Epitech-IndieStudio

./: CMakeLists.txt
assets/images/: readme.txt
assets/map/: map.irr  mapGrid.txt  readme.txt
assets/models/: readme.txt
assets/textures/: readme.txt
cmake/include/: IrrCompileConfig.h
include/: Core.hpp
include/GUI/: Bomb.hpp  Character.hpp  Game.hpp  Map.hpp  PowerUp.hpp  Wall.hpp
include/GUI/menu/: EscMenu.hpp  MainMenu.hpp  SplashScreen.hpp
include/common/: Time.hpp
include/event/: CharacterEvent.hpp  KeyboardEvent.hpp
include/exception/: IndieStudioExceptions.hpp
include/sound/: Music.hpp
src/: Core.cpp  main.cpp
src/GUI/: Bomb.cpp  Character.cpp  Game.cpp  Map.cpp  PowerUp.cpp  Wall.cpp
src/GUI/menu/: EscMenu.cpp  MainMenu.cpp  SplashScreen.cpp
src/common/: Time.cpp
src/event/: CharacterEvent.cpp  KeyboardEvent.cpp
src/exception/: IndieStudioExceptions.cpp
src/sound/: Music.cpp
